Update and rename youtube.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Youtube clone</title>
+<title> Youtube clone by midounjr </title>
 <link rel="stylesheet" href="video.css" >
 <link rel="stylesheet" href="header.css">
 <link rel="stylesheet" href="general.css">
